Stop icon overflow with narrow columns
The close and popout buttons move downwards when you have narrow
columns. I don't like that. Turns out the character counter is way too
wide.

--- a/sass/compose.scss
+++ b/sass/compose.scss
@@ -71,3 +71,7 @@
 .js-compose-header-close {
   margin: 0px !important;
 }
+
+.js-character-count {
+  width: 30px !important; // Stops the close and popout buttons moving down with narrow columns
+}
